overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -187,7 +187,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  overflow: hidden auto;
+  overflow-y: auto;
   height: 298px;
   width: 100%;
 }
